fix: badge alignement (#55)
* alignement of badge section

* alignement

* aligned badge

* fix: email badge button

--- a/src/app/components/badge/badge.component.css
+++ b/src/app/components/badge/badge.component.css
@@ -15,7 +15,3 @@
   left: auto;
   right: -2.5px;
 }
-
-div > * {
-  margin-bottom: 16px;
-}
